--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,11 +6,11 @@
 }
 .App .content {
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 90%;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 720px) {
   .App .content {
-    max-width: 90%;
+    max-width: 700px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -232,7 +232,7 @@ header {
   height: 100%;
   width: 100%;
   background: url("../../assets/img/sky.svg");
-  margin-top: 2rem;
+  padding-top: 2rem;
   margin-bottom: 0;
   flex-direction: column;
   position: relative;
@@ -473,8 +473,12 @@ p.tags {
 }
 
 .thumb {
-  max-width: none;
   border-radius: 10px;
+}
+@media screen and (min-width: 480px) {
+  .thumb {
+    max-width: none;
+  }
 }
 
 .project-list {
