--- a/src/assets/sass/sections/_header.scss
+++ b/src/assets/sass/sections/_header.scss
@@ -6,7 +6,7 @@ header {
   height: 100%;
   width: 100%;
   background: url('../../assets/img/sky.svg');
-  margin-top: 2rem;
+  padding-top: 2rem;
   margin-bottom: 0;
   flex-direction: column;
   position: relative;
